Construção do seletor da tela pesquisaGeral